--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
 </head>
 <body>
 
-  <header class="debug_bg">
+  <header class="debug debug_lgrey">
     <div class="container">
       <div class="row debug_h100">
-        <div class="col-xs-6 col-md-3 debug_dblue"></div>
+        <div class="col-xs-6 col-md-3 debug_sgreen"></div>
         <div class="hidden-xs hidden-sm col-md-5 debug_sal"></div>
         <div class="col-xs-6 col-md-4 debug_lblue"></div>
       </div>
     </div>
   </header>
+
+<section class="jumbotron debug debug_dblue">
+  <div class="container">
+    <div class="row debug_h400">
+      <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
+      <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
+    </div>
+  </div>
+</section>
 
   <main>
 
