--- a/index.html
+++ b/index.html
@@ -21,17 +21,42 @@
     </div>
   </header>
 
-<section class="jumbotron debug debug_dblue">
+<section class="debug debug_dblue">
   <div class="container">
     <div class="row debug_h400">
-      <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
+      <div class="col-xs-12 col-sm-6 debug_white debug_border">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
       <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
     </div>
   </div>
 </section>
 
   <main>
-
+    <section class="debug_lgrey">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-xs-12">Titolo</div>
+          <div class="col-xs-12">
+            <div class="row">
+              <div class="col-xs-6 col-sm-2 debug_sal">img1</div>
+              <div class="col-xs-6 col-sm-2 debug_sal">img2</div>
+              <div class="col-xs-6 col-sm-2 debug_sal">img3</div>
+              <div class="col-xs-6 col-sm-2 debug_sal">img4</div>
+              <div class="col-xs-6 col-sm-2 debug_sal">img5</div>
+              <div class="col-xs-6 col-sm-2 debug_sal">img6</div>
+            </div>
+          </div>
+          <div class="col-xs-12">Link</div>
+        </div>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
   </main>
 
   <footer>
