--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 
-  <header class="debug debug_lgrey">
+<!-- Header -->
+  <header class="debug">
     <div class="container">
       <div class="row debug_h100">
         <div class="col-xs-6 col-md-3 debug_sgreen"></div>
@@ -21,6 +22,7 @@
     </div>
   </header>
 
+<!-- Jumbotron -->
 <section class="debug debug_dblue">
   <div class="container">
     <div class="row debug_h400">
@@ -33,6 +35,7 @@
 </section>
 
   <main>
+    <!-- Section N°1 -->
     <section class="debug_lgrey">
       <div class="container text-center">
         <div class="row">
@@ -51,7 +54,21 @@
         </div>
       </div>
     </section>
-    <section></section>
+
+    <!-- Section N°2 -->
+    <section>
+      <div class="container">
+        <div class="row text-left">
+          <div class="col-xs-12 text-center">Titolo</div>
+          <div class="col-xs-12 col-sm-4 debug_sgreen">Menu</div>
+          <div class="col-xs-12 col-sm-4 debug_sgreen">Img1</div>
+          <div class="col-xs-12 col-sm-4 debug_sgreen">Img2</div>
+          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_sgreen">Img3</div>
+          <div class="col-xs-12 col-sm-4 debug_sgreen">Img4</div>
+        </div>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
