--- a/index.html
+++ b/index.html
@@ -60,16 +60,26 @@
       <div class="container">
         <div class="row text-left">
           <div class="col-xs-12 text-center">Titolo</div>
-          <div class="col-xs-12 col-sm-4 debug_sgreen">Menu</div>
-          <div class="col-xs-12 col-sm-4 debug_sgreen">Img1</div>
-          <div class="col-xs-12 col-sm-4 debug_sgreen">Img2</div>
-          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_sgreen">Img3</div>
-          <div class="col-xs-12 col-sm-4 debug_sgreen">Img4</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Menu</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img1</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img2</div>
+          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_h100 debug_sgreen">Img3</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img4</div>
         </div>
       </div>
     </section>
 
-    <section></section>
+    <!-- Section N°3 -->
+    <section class="debug_lgrey">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-12">Title</div>
+          <div class="col-xs-12 debug_h400 debug_lblue">Immagine</div>
+          <div class="col-xs-12">pallini</div>
+        </div>
+      </div>
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
