--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           <div class="col-xs-12">
             <div class="row">
               <div class="col-xs-6 col-sm-2 debug_sal">img1</div>
-              <div class="col-xs-6 col-sm-2 debug_sal">img2</div>
+              <div class="col-xs-6 col-sm-2 debug_lblue">img2</div>
               <div class="col-xs-6 col-sm-2 debug_sal">img3</div>
-              <div class="col-xs-6 col-sm-2 debug_sal">img4</div>
+              <div class="col-xs-6 col-sm-2 debug_lblue">img4</div>
               <div class="col-xs-6 col-sm-2 debug_sal">img5</div>
-              <div class="col-xs-6 col-sm-2 debug_sal">img6</div>
+              <div class="col-xs-6 col-sm-2 debug_lblue">img6</div>
             </div>
           </div>
           <div class="col-xs-12">Link</div>
@@ -61,10 +61,10 @@
         <div class="row text-left">
           <div class="col-xs-12 text-center">Titolo</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Menu</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img1</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img1</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img2</div>
-          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_h100 debug_sgreen">Img3</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img4</div>
+          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_h100 debug_lblue">Img3</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img4</div>
         </div>
       </div>
     </section>
@@ -79,8 +79,17 @@
         </div>
       </div>
     </section>
-
-    <section></section>
+    <!-- Section N°4 -->
+    <section>
+      <div class="container">
+        <div class="row text-left">
+          <div class="col-xs-12 text-center">Title</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img1</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img2</div>
+          <div class="col-xs-12 col-sm-4 debug_h100 debug_lblue">Img3</div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
