--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </div>
       </div>
     </section>
+
     <!-- Section N°4 -->
     <section>
       <div class="container">
@@ -90,7 +91,17 @@
         </div>
       </div>
     </section>
-    <section></section>
+
+    <!-- Section N°5 -->
+    <section class="debug_dblue">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-sx-12 debug_lgrey">Title</div>
+          <div class="col-sx-12 col-lg-6 debug_h400 debug_sal"></div>
+          <div class="col-sx-12 col-lg-6 debug_h400 debug_sgreen"></div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
   </main>
