--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>DigitalOcean</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -39,7 +39,7 @@
     <section class="debug_lgrey">
       <div class="container text-center">
         <div class="row">
-          <div class="col-xs-12">Titolo</div>
+          <div class="col-xs-12"><h2>Title</h2></div>
           <div class="col-xs-12">
             <div class="row">
               <div class="col-xs-6 col-sm-2 debug_sal">img1</div>
@@ -59,7 +59,7 @@
     <section>
       <div class="container">
         <div class="row text-left">
-          <div class="col-xs-12 text-center">Titolo</div>
+          <div class="col-xs-12 text-center"><h2>Title</h2></div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Menu</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img1</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img2</div>
@@ -73,7 +73,7 @@
     <section class="debug_lgrey">
       <div class="container">
         <div class="row text-center">
-          <div class="col-xs-12">Title</div>
+          <div class="col-xs-12"><h2>Title</h2></div>
           <div class="col-xs-12 debug_h400 debug_lblue">Immagine</div>
           <div class="col-xs-12">pallini</div>
         </div>
@@ -84,7 +84,7 @@
     <section>
       <div class="container">
         <div class="row text-left">
-          <div class="col-xs-12 text-center">Title</div>
+          <div class="col-xs-12 text-center"><h2>Title</h2></div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img1</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img2</div>
           <div class="col-xs-12 col-sm-4 debug_h100 debug_lblue">Img3</div>
@@ -96,14 +96,35 @@
     <section class="debug_dblue">
       <div class="container">
         <div class="row text-center">
-          <div class="col-sx-12 debug_lgrey">Title</div>
+          <div class="col-sx-12 debug_lgrey"><h2>Title</h2></div>
           <div class="col-sx-12 col-lg-6 debug_h400 debug_sal"></div>
           <div class="col-sx-12 col-lg-6 debug_h400 debug_sgreen"></div>
         </div>
       </div>
     </section>
-    <section></section>
-    <section></section>
+
+    <!-- Section N°6 -->
+    <section class="debug_lgrey">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-12"><h2>Title</h2></div>
+          <div class="col-xs-12 debug_h400 debug_lblue">Immagine</div>
+          <div class="col-xs-12">pallini</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section N°7 -->
+    <section class="debug_dblue">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-12 debug_lgrey">
+            <h2>Title</h2>
+            Button
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
