--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </section>
 
     <!-- Section N°7 -->
-    <section class="debug_dblue">
+    <section class="debug_lblue">
       <div class="container">
         <div class="row text-center">
           <div class="col-xs-12 debug_lgrey">
@@ -127,8 +127,17 @@
     </section>
   </main>
 
-  <footer>
-
+  <!-- Footer -->
+  <footer class="debug_dblue">
+    <div class="container">
+      <div class="row text-left">
+        <div class="col-xs-12 col-sm-12 col-md-4 debug_h100 debug_sgreen">Logo Copyright</div>
+        <div class="col-xs-12 col-sm-6 col-md-2 debug_lgrey">Company</div>
+        <div class="col-xs-12 col-sm-6 col-md-2 debug_sal">Products</div>
+        <div class="col-xs-12 col-sm-6 col-md-2 debug_lblue">Community</div>
+        <div class="col-xs-12 col-sm-6 col-md-2 debug_sal">Support</div>
+      </div>
+    </div>
   </footer>
 
 </body>
