--- a/index.html
+++ b/index.html
@@ -12,27 +12,67 @@
 <body>
 
 <!-- Header -->
-  <header class="debug">
+  <header class="navbar-fixed-top">
     <div class="container">
-      <div class="row debug_h100">
-        <div class="col-xs-6 col-md-3 debug_sgreen"></div>
-        <div class="hidden-xs hidden-sm col-md-5 debug_sal"></div>
-        <div class="col-xs-6 col-md-4 debug_lblue"></div>
+      <div class="row ms_nav ms_links">
+        <!-- Logo -->
+        <div class="col-xs-6 col-md-2">
+          <a href="#"><img src="img/logo.webp" alt="DigitalOcean Logo"></a>
+        </div>
+
+        <!-- Navbar -->
+        <div class="col-xs-6 col-md-10">
+          <div class="row">
+
+            <!-- Burger Menu XS -->
+            <div class="col-xs-12 hidden-md hidden-lg text-right ms_blue">
+              <a href="#"><i class="fas fa-bars"></i></a>
+            </div>
+
+            <!-- Menu MD -->
+            <div class="col-md-12 hidden-xs hidden-sm ms_dblue">
+              <div class="row">
+
+                <!-- Center Menu -->
+                <div class="col-md-7 text-center ms_nav_c">
+                  <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Pricing</a></li>
+                  </ul>
+                </div>
+
+                <!-- Right Menu -->
+                <div class="col-md-5 text-right ms_nav_r">
+                  <ul>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a class="btn_blue" href="#">Sign Up</a></li>
+                  </ul>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
   </header>
 
-<!-- Jumbotron -->
-<section class="debug debug_dblue">
-  <div class="container">
-    <div class="row debug_h400">
-      <div class="col-xs-12 col-sm-6 debug_white debug_border">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  <!-- Jumbotron -->
+  <section class="jumbotron debug debug_dblue">
+    <div class="container">
+      <div class="row debug_h400">
+        <div class="col-xs-12 col-sm-6 debug_white debug_border">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
       </div>
-      <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
     </div>
-  </div>
-</section>
+  </section>
 
   <main>
     <!-- Section N°1 -->
