--- a/index.html
+++ b/index.html
@@ -63,18 +63,27 @@
         </div>
 
       </div>
-      
+
     </div>
   </header>
 
   <!-- Jumbotron -->
-  <section class="jumbotron debug debug_dblue">
+  <section class="jumbotron">
     <div class="container">
-      <div class="row debug_h400">
-        <div class="col-xs-12 col-sm-6 debug_white debug_border">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="row">
+        <div class="col-xs-12 col-sm-7 ms_white">
+          <h1>The simplest cloud platform for developers & teams</h1>
+          <p>Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 debug_white debug_border"></div>
+        <div class="col-xs-12 col-sm-5 text-center ms_login bg_white">
+          <h2>Deploy your app in seconds.</h2>
+          <h2 class="ms_blue">Get started now.</h2>
+          <input type="email" name="Email" value="" placeholder="Email">
+          <input type="password" name="Password" value="" placeholder="Password">
+          <input type="submit" class="btn btn-default btn_account" value="Create your account">
+          <input type="submit" class="btn btn-default btn_google" value="Sign up with google">
+          <small><strong>By signing up you agree to the <a href="#">Terms of Service.</a> </strong></small>
+        </div>
       </div>
     </div>
   </section>
