--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-7 ms_white">
           <h1>The simplest cloud platform for developers & teams</h1>
-          <p>Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
+          <p class="ms_lgrey">Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
         </div>
         <div class="col-xs-12 col-sm-5 text-center ms_login bg_white">
           <h2>Deploy your app in seconds.</h2>
@@ -90,21 +90,21 @@
 
   <main>
     <!-- Section N°1 -->
-    <section class="debug_lgrey">
+    <section id="customers" class="bg_grey">
       <div class="container text-center">
         <div class="row">
-          <div class="col-xs-12"><h2>Title</h2></div>
+          <div class="col-xs-12 ms_grey"><h4>Innovative businesses trust DigitalOcean</h4></div>
           <div class="col-xs-12">
             <div class="row">
-              <div class="col-xs-6 col-sm-2 debug_sal">img1</div>
-              <div class="col-xs-6 col-sm-2 debug_lblue">img2</div>
-              <div class="col-xs-6 col-sm-2 debug_sal">img3</div>
-              <div class="col-xs-6 col-sm-2 debug_lblue">img4</div>
-              <div class="col-xs-6 col-sm-2 debug_sal">img5</div>
-              <div class="col-xs-6 col-sm-2 debug_lblue">img6</div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_docker.png" alt="Logo Docker"></div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_gitlab.png" alt="Logo Gitlab"></div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_slack.png" alt="Logo Slack"></div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_hashicorp.png" alt="Logo Hashicorp"></div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_hashicorp.png" alt="Logo Hashicorp"></div>
+              <div class="col-xs-6 col-sm-2"><img src="img/logo_splunk.png" alt="Logo Splunk"></div>
             </div>
           </div>
-          <div class="col-xs-12">Link</div>
+          <div class="col-xs-12"><strong><a href="#">View customer stories &gt;</a></strong></div>
         </div>
       </div>
     </section>
