--- a/index.html
+++ b/index.html
@@ -110,71 +110,233 @@
     </section>
 
     <!-- Section N°2 -->
-    <section>
+    <section id="info" class="ms_dgrey">
       <div class="container">
-        <div class="row text-left">
-          <div class="col-xs-12 text-center"><h2>Title</h2></div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Menu</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img1</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img2</div>
-          <div class="col-xs-12 col-sm-offset-4 col-sm-4 debug_h100 debug_lblue">Img3</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img4</div>
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <h2 class="ms_dblue">Deploy and scale seamlessly</h2>
+            <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+          </div>
+
+          <div class="col-xs-12">
+            <div class="row text-left">
+              <div class="col-xs-12 col-sm-3">
+                <ul>
+                  <li>Deploy</li>
+                  <li>Manage</li>
+                  <li>Secure</li>
+                  <li>Scale</li>
+                  <li>Monitor</li>
+                </ul>
+              </div>
+
+              <div class="col-xs-12 col-sm-8">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <img src="img/icon1.svg" alt="Icon1">
+                    <h4 class="ms_dblue">Kubernetes in minutes</h4>
+                    <p><strong>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</strong></p>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <img src="img/icon2.svg" alt="Icon2">
+                    <h4 class="ms_dblue">Flexible compute types</h4>
+                    <p><strong>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</strong></p>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <img src="img/icon3.svg" alt="Icon3">
+                    <h4 class="ms_dblue">App Platform</h4>
+                    <p><strong>Build, deploy, and scale apps quickly using a simple, fully managed solution. We’ll handle the infrastructure, app runtimes, and dependencies, so that you can push code to production in just a few clicks.</strong></p>
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <img src="img/icon4.svg" alt="Icon4">
+                    <h4 class="ms_dblue">1-Click App Marketplace</h4>
+                    <p><strong>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</strong></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Section N°3 -->
-    <section class="debug_lgrey">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-xs-12"><h2>Title</h2></div>
-          <div class="col-xs-12 debug_h400 debug_lblue">Immagine</div>
-          <div class="col-xs-12">pallini</div>
+    <section id="design" class="bg_grey ms_dgrey">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2 class="ms_dblue">Designed for developers</h2>
+            <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+          </div>
+          <div class="col-xs-12">
+            <i class="fas fa-angle-left hidden-xs"></i>
+            <img src="img/screenshot-create-droplet-12336b41.jpg"  alt="Design">
+            <i class="fas fa-angle-right hidden-xs"></i>
+            <div class="ms_dblue">
+              <strong>Create compute servers in 55 seconds or less.</strong>
+            </div>
+          </div>
+          <div class="col-xs-12 ms_circles ms_blue">
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Section N°4 -->
-    <section>
+    <section id="features" class="ms_dgrey">
       <div class="container">
-        <div class="row text-left">
-          <div class="col-xs-12 text-center"><h2>Title</h2></div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sgreen">Img1</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_sal">Img2</div>
-          <div class="col-xs-12 col-sm-4 debug_h100 debug_lblue">Img3</div>
+        <div class="row">
+          <div class="col-xs-12 text-center">
+              <h2 class="ms_dblue">The features your business needs</h2>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/icon5.svg" alt="Icon5">
+            <h4 class="ms_dblue">Predictable pricing</h4>
+            <p><strong>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</strong></p>
+            <a href="#"><strong>Pricing &gt;</strong></a>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/icon6.svg" alt="Icon6">
+            <h4 class="ms_dblue">World-class service</h4>
+            <p><strong>Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</strong></p>
+            <a href="#"><strong>Support &gt;</strong></a>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/icon7.svg" alt="Icon7">
+            <h4 class="ms_dblue">Reliable platform</h4>
+            <p><strong>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</strong></p>
+            <a href="#"><strong>Security &gt;</strong></a>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Section N°5 -->
-    <section class="debug_dblue">
+    <section id="test_speed">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-sx-12 debug_lgrey"><h2>Title</h2></div>
-          <div class="col-sx-12 col-lg-6 debug_h400 debug_sal"></div>
-          <div class="col-sx-12 col-lg-6 debug_h400 debug_sgreen"></div>
+        <div class="row text-center ms_white">
+          <div class="col-xs-12"><h2>Service your customers around the world from 12 regions.</h2></div>
+
+          <div class="col-sx-12 col-lg-6">
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">ams2</div>
+              <div class="col-xs-6 ms_lgrey">Amsterdam, Netherlands</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">ams3</div>
+              <div class="col-xs-6 ms_lgrey">Amsterdam, Netherlands</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">blr1</div>
+              <div class="col-xs-6 ms_lgrey">Bangalore, India</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">fra1</div>
+              <div class="col-xs-6 ms_lgrey">Frankfurt, German</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">lon1</div>
+              <div class="col-xs-6 ms_lgrey">London, UK</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">nyc1</div>
+              <div class="col-xs-6 ms_lgrey">New York, USA</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+          </div>
+
+          <div class="col-sx-12 col-lg-6">
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">ams2</div>
+              <div class="col-xs-6 ms_lgrey">Amsterdam, Netherlands</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">ams3</div>
+              <div class="col-xs-6 ms_lgrey">Amsterdam, Netherlands</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">blr1</div>
+              <div class="col-xs-6 ms_lgrey">Bangalore, India</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">fra1</div>
+              <div class="col-xs-6 ms_lgrey">Frankfurt, German</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">lon1</div>
+              <div class="col-xs-6 ms_lgrey">London, UK</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+            <div class="row text-left">
+              <div class="col-xs-2 ms_uppercase">nyc1</div>
+              <div class="col-xs-6 ms_lgrey">New York, USA</div>
+              <div class="col-xs-4"><a href="#">Test speed &gt;</a></div>
+            </div>
+
+          </div>
+
         </div>
       </div>
     </section>
 
     <!-- Section N°6 -->
-    <section class="debug_lgrey">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-xs-12"><h2>Title</h2></div>
-          <div class="col-xs-12 debug_h400 debug_lblue">Immagine</div>
-          <div class="col-xs-12">pallini</div>
+    <section id="develop" class="bg_grey ms_dgrey">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2 class="ms_dblue">Development teams love DigitalOcean</h2>
+          </div>
+          <div class="col-xs-12">
+            <i class="fas fa-angle-left hidden-xs"></i>
+            <div class="ms_box bg_white">
+              <img src="img/rockerbox-logo.png"  alt="Rockerbox Logo">
+              <p>"We have been able to make scaling the technical infrastructure of our business cost effective and efficient."</p>
+              <h4 class="ms_dblue">Rick O'Toole</h4>
+              <h5 class="ms_dblue">Co-founder and CTO</h5>
+              <strong><a href="#">Read story &gt;</a></strong>
+            </div>
+            <i class="fas fa-angle-right hidden-xs"></i>
+          </div>
+          <div class="col-xs-12 ms_circles ms_blue">
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+            <i class="far fa-circle"></i>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Section N°7 -->
-    <section class="debug_lblue">
+    <section id="start" class="bg_blue">
       <div class="container">
         <div class="row text-center">
-          <div class="col-xs-12 debug_lgrey">
-            <h2>Title</h2>
-            Button
+          <div class="col-xs-12 ms_white">
+            <h2>Get started now.</h2>
+            <a class="btn_blue" href="#">Create your account</a>
           </div>
         </div>
       </div>
@@ -182,14 +344,77 @@
   </main>
 
   <!-- Footer -->
-  <footer class="debug_dblue">
+  <footer class="bg_dblue ms_lgrey">
     <div class="container">
       <div class="row text-left">
-        <div class="col-xs-12 col-sm-12 col-md-4 debug_h100 debug_sgreen">Logo Copyright</div>
-        <div class="col-xs-12 col-sm-6 col-md-2 debug_lgrey">Company</div>
-        <div class="col-xs-12 col-sm-6 col-md-2 debug_sal">Products</div>
-        <div class="col-xs-12 col-sm-6 col-md-2 debug_lblue">Community</div>
-        <div class="col-xs-12 col-sm-6 col-md-2 debug_sal">Support</div>
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <img src="img/logo-mark.svg" alt="DigitalOcean Logo">
+          <div>
+            <strong>© 2020 DigitalOcean, LLC. All rights reserved.</strong>
+          </div>
+          <div>
+            <strong class="ms_dgrey">Proudly made in NY</strong>
+          </div>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul>
+            <li><h4 class="ms_white">Company</h4></li>
+            <li>About</li>
+            <li>Leadership</li>
+            <li>Link</li>
+            <li>Blog</li>
+            <li>Careers</li>
+            <li>Partner Network</li>
+            <li>Referral Program</li>
+            <li>Events</li>
+            <li>Press</li>
+            <li>Legal & Security</li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul>
+            <li><h4 class="ms_white">Products</h4></li>
+            <li>Droplets</li>
+            <li>Spaces</li>
+            <li>Kubernetes</li>
+            <li>Load Balancers</li>
+            <li>Block Storage</li>
+            <li>Tools & Integrations</li>
+            <li>One-Click Apps</li>
+            <li>API</li>
+            <li>Pricing</li>
+            <li>Documentation</li>
+            <li>Release Notes</li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul>
+            <li><h4 class="ms_white">Community</h4></li>
+            <li>Tutorials</li>
+            <li>Meetups</li>
+            <li>Q&A</li>
+            <li>Write for Donations</li>
+            <li>Droplets for Demos</li>
+            <li>Hatch</li>
+            <li>Shop Swag</li>
+            <li>Research PRogram</li>
+            <li>Current Research</li>
+            <li>Open Source</li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-2">
+          <ul>
+            <li><h4 class="ms_white">Support</h4></li>
+            <li>Contact Support</li>
+            <li>FAQ</li>
+            <li>Network Status</li>
+          </ul>
+        </div>
       </div>
     </div>
   </footer>
